<?xml version="1.0"?>
<package format="2">
  <name>turtlesim_draw</name>
  <version>0.1.0</version>
  <description>The turtlesim_draw package</description>
  <maintainer email="haa-c001@athuman.com">athuman</maintainer>>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <export>
  </export>
</package>
